# IT-Careers-2024

./: .gitignore  README.md
Data-Structures-And-Algorithms/03.GreedyAlgorithms/: 03.GreedyAlgorithms.sln
Data-Structures-And-Algorithms/03.GreedyAlgorithms/00.Demo/: Program.cs
Data-Structures-And-Algorithms/03.GreedyAlgorithms/01.BruteForse/: Program.cs
Data-Structures-And-Algorithms/03.GreedyAlgorithms/02.ActivitySelection/: 02.ActivitySelection.csproj  Program.cs
Data-Structures-And-Algorithms/03.GreedyAlgorithms/03.SetCover/: 03.SetCover.csproj  Program.cs
Data-Structures-And-Algorithms/04.DynamicProgramming/: 04.DynamicProgramming.sln
Data-Structures-And-Algorithms/05.Trees/: 05.Trees.sln
Data-Structures-And-Algorithms/06. Graphs/: Graphs.sln
Data-Structures-And-Algorithms/07. Exam-prep/: Exam-Prep.sln
Data-Structures-And-Algorithms/Exam Preparation/: Exam Preparation.sln
Functional-Programming/: CommonUtilities.hs  GeneratorUtilities.hs  LICENSE  ListUtilities.hs  MathUtilities.hs  StringUtilities.hs  arrayData.hs  closure.hs  functional-programming.cabal  functionsExercise.hs  helloWorld.hs  helperFunctions.hs  recursion.hs  reverseTriangle.hs  sumOfFirstNPrimeNumbers.hs
Functional-Programming/app/: main.hs
Functional-Programming/app/ExamPrep/: arrayData.hs  camping.hs  mostValuedCustomer.hs
Functional-Programming/app/Exercises/: functions.hs  functionsMoreExercises.hs  lists.hs  recursionExercise.hs
Functional-Programming/app/Utilities/: CommonUtilities.hs  GeneratorUtilities.hs  ListUtilities.hs  MathUtilities.hs  StringUtilities.hs
(+62 files in other folders)
