cabal-version:      3.0
name:               functional-programming
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             DCay
maintainer:         atriumandvintrigol@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

executable functional-programming
    main-is:          main.hs
    other-modules: 
        Utilities.MathUtilities
        Utilities.CommonUtilities
        Utilities.GeneratorUtilities
        Utilities.ListUtilities
        Utilities.StringUtilities
        ExamPrep.ArrayData
        ExamPrep.Camping
        ExamPrep.MostValuedCustomer
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
